# Game-of-Life

./: CMakeLists.txt  README.md  test.life
src/: Board.cpp  Board.h  main.cpp
